--- a/app/home/card/card.component.html
+++ b/app/home/card/card.component.html
@@ -4,6 +4,6 @@
   </div>
   <div class="resent-grid-info recommended-grid-info">
     <h3><a href="single.html" class="title title-info">{{media.title}}</a></h3>
-    {{media.genre}}
+    {{media.genre | genre}}
   </div>
 </div>
