--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -3,7 +3,14 @@
 		<div class="recommended-info">
 			<h3>Recent Videos</h3>
 		</div>
-		<app-card *ngFor="let m of medias" [media]="m"></app-card>
+
+		 <select class="form-control" [(ngModel)]="valueFilter">
+			 <option value="all">Tous</option>
+	 		 <option *ngFor="let g of genres" [value]="g">{{g | genre}}</option>
+ 	  </select>
+
+		<div class="clearfix"> </div>
+		<app-card *ngFor="let m of medias | genreFilter:valueFilter" [media]="m"></app-card>
 		<div class="clearfix"> </div>
 	</div>
 </div>
