--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -4,7 +4,9 @@
 			<h3>Recent Videos</h3>
 		</div>
 
-		 <select class="form-control" [(ngModel)]="valueFilter">
+		<app-login></app-login>
+
+		<select class="form-control" [(ngModel)]="valueFilter">
 			 <option value="all">Tous</option>
 	 		 <option *ngFor="let g of genres" [value]="g">{{g | genre}}</option>
  	  </select>
