--- a/app/home/card/card.component.html
+++ b/app/home/card/card.component.html
@@ -3,7 +3,12 @@
     <a href="single.html"><img [src]="media.thumbnailUrl" alt="" /></a>
   </div>
   <div class="resent-grid-info recommended-grid-info">
-    <h3><a href="single.html" class="title title-info">{{media.title}}</a></h3>
+    <h3>
+        <a href="single.html"
+          class="title title-info"
+          [routerLink]="['./media', media.id]">
+          {{media.title}}
+        </a></h3>
     {{media.genre | genre}}
   </div>
 </div>
