--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -22,8 +22,7 @@
 
     </div>
     <div class="signin">
-      <a href="#small-dialog" class="play-icon popup-with-zoom-anim">Sign In</a>
-
+      <a href="#small-dialog" class="play-icon popup-with-zoom-anim" [routerLink]="['/login']">Sign In</a>
     </div>
     <div class="clearfix"> </div>
   </div>
