--- a/app/home/card/card.component.html
+++ b/app/home/card/card.component.html
@@ -5,5 +5,6 @@
   <div class="resent-grid-info recommended-grid-info">
     <h3><a href="single.html" class="title title-info">{{media.title}}</a></h3>
     {{media.genre | genre}}
+    <button (click)="deleteMedia(media.id)">Supprimer</button>
   </div>
 </div>
