--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -6,13 +6,16 @@
 
 		<app-login></app-login>
 
+		<button (click)="createMedia()">Créer</button>
+
 		<select class="form-control" [(ngModel)]="valueFilter">
 			 <option value="all">Tous</option>
 	 		 <option *ngFor="let g of genres" [value]="g">{{g | genre}}</option>
  	  </select>
 
 		<div class="clearfix"> </div>
-		<app-card *ngFor="let m of medias | genreFilter:valueFilter" [media]="m"></app-card>
+		<app-card *ngFor="let m of medias | genreFilter:valueFilter ; let i = index"
+							[media]="m" (onDelete)="onDeleteMedia(i)"></app-card>
 		<div class="clearfix"> </div>
 	</div>
 </div>
