--- a/app/home/card/card.component.html
+++ b/app/home/card/card.component.html
@@ -4,9 +4,8 @@
   </div>
   <div class="resent-grid-info recommended-grid-info">
     <h3>
-        <a 
-          class="title title-info"
-          [routerLink]="['./media', media.id]">
+        <a
+          class="title title-info">
           {{media.title}}
         </a></h3>
     {{media.genre | genre}}
