--- a/app/navbar/navbar.component.html
+++ b/app/navbar/navbar.component.html
@@ -11,8 +11,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
   <div class="top-search">
-    <form class="navbar-form navbar-right">
-      <input type="text" class="form-control" placeholder="Search...">
+    <form class="navbar-form navbar-right" [formGroup]="form">
+      <input type="text" class="form-control" placeholder="Search..." [formControl]="search">
       <input type="submit" value=" ">
     </form>
   </div>
