--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -20,13 +20,9 @@
     <div class="file">
       <a href="upload.html">Upload</a>
     </div>
-    <div class="signin">
-      <a href="#small-dialog2" class="play-icon popup-with-zoom-anim">Sign Up</a>
 
-    </div>
     <div class="signin">
-      <a href="#small-dialog" class="play-icon popup-with-zoom-anim">Sign In</a>
-
+      <a routerLink="login" class="play-icon popup-with-zoom-anim">Login</a>
     </div>
     <div class="clearfix"> </div>
   </div>
