--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -4,13 +4,16 @@
 			<h3>Recent Videos</h3>
 		</div>
 
+		<button (click)="createMedia()">Créer</button>
+
 		<select class="form-control" [(ngModel)]="valueFilter">
 			 <option value="all">Tous</option>
 	 		 <option *ngFor="let g of genres" [value]="g">{{g | genre}}</option>
  	  </select>
 
 		<div class="clearfix"> </div>
-		<app-card *ngFor="let m of medias | genreFilter:valueFilter" [media]="m"></app-card>
+		<app-card *ngFor="let m of medias | genreFilter:valueFilter ; let i = index" 
+		[media]="m" (onDelete)="onDeleteMedia(i)"></app-card>
 		<div class="clearfix"> </div>
 	</div>
 </div>
