--- a/src/app/layout/home/card/card.component.html
+++ b/src/app/layout/home/card/card.component.html
@@ -5,7 +5,7 @@
   <div class="resent-grid-info recommended-grid-info">
     <h3><a [routerLink]="['media', media.id]" class="title title-info">{{media.title}}</a></h3>
     {{media.genre | genre}}
-    <button (click)="deleteMedia()" 
+    <button (onConfirm)="deleteMedia($event)" 
     prompt="Voulez-vous supprimer le média ?"
     [mediaId]="media.id">Supprimer</button>
   </div>
